@@ -1,4 +1,4 @@
-/* $Id: conf.c,v 1.51 2007/11/06 11:39:33 manu Exp $ */
+/* $Id: conf.c,v 1.52 2007/12/29 19:06:49 manu Exp $ */
 
 /*
  * Copyright (c) 2004 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: conf.c,v 1.51 2007/11/06 11:39:33 manu Exp $");
+__RCSID("$Id: conf.c,v 1.52 2007/12/29 19:06:49 manu Exp $");
 #endif
 #endif
 
@@ -423,6 +423,7 @@ conf_defaults(c)
 	c->c_autowhite_validity = AUTOWHITE_VALIDITY;
 	c->c_pidfile = NULL;
 	c->c_dumpfile = DUMPFILE;
+	c->c_dumpfile_mode = -1;
 	prefix2mask4(32, &c->c_match_mask);
 #ifdef AF_INET6
 	prefix2mask6(128, &c->c_match_mask6);
@@ -432,7 +433,7 @@ conf_defaults(c)
 	c->c_syncsrcaddr = NULL;
 	c->c_syncsrcport = NULL;
 	c->c_socket = NULL;
-	c->c_socket_mode = 0;
+	c->c_socket_mode = -1;
 	c->c_user = NULL;
 	c->c_nodetach = 0;
 	c->c_report = C_ALL;
