@@ -1,5 +1,5 @@
 .\"
-.\" $Id: greylist.conf.5,v 1.83 2007/12/17 14:26:35 manu Exp $
+.\" $Id: greylist.conf.5,v 1.84 2007/12/29 19:06:49 manu Exp $
 .\"
 .\" Copyright (c) 2004-2007 Emmanuel Dreyfus
 .\" All rights reserved.
@@ -823,9 +823,10 @@ must be absolute and it must be enclosed in quotes. Here is an example:
 This chooses the location of the greylist dump file, like the
 .B -d
 command line option does. The path must be absolute and enclosed in quotes.
+It can optionally be followed by an octal permission mode.
 Example:
 .IP
-  dumpfile "/var/milter-greylist/greylist.db"
+  dumpfile "/var/milter-greylist/greylist.db" 640
 .TP
 .I subnetmatch
 This is equivalent to the 
@@ -851,7 +852,8 @@ Like the
 command line option, this keyword is used to specify the socket used
 to communicate with
 .B sendmail(8)\fR.
-It must be enclosed in quotes and can optionally be followed by a permission mode
+It must be enclosed in quotes and can optionally be followed by an octal
+permission mode
 (valid values are 666, 660 or 600, other values cause an error):
 .IP
   socket "/var/milter-greylist/milter-greylist.sock" 660
