@@ -1,4 +1,4 @@
-/* $Id: milter-greylist.c,v 1.201 2007/11/11 11:57:19 manu Exp $ */
+/* $Id: milter-greylist.c,v 1.202 2007/12/29 19:06:49 manu Exp $ */
 
 /*
  * Copyright (c) 2004-2007 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID  
-__RCSID("$Id: milter-greylist.c,v 1.201 2007/11/11 11:57:19 manu Exp $");
+__RCSID("$Id: milter-greylist.c,v 1.202 2007/12/29 19:06:49 manu Exp $");
 #endif
 #endif
 
@@ -1312,7 +1312,7 @@ main(argc, argv)
 	/*
 	 * Set socket permission
 	 */
-	if (conf.c_socket_mode) {
+	if (conf.c_socket_mode != -1) {
 		switch(conf.c_socket_mode) {
 		case 666:
 			umask(000);
